Refine version properties for documentation build.
See spring-projects/spring-data-build#2638

--- a/src/main/antora/resources/antora-resources/antora.yml
+++ b/src/main/antora/resources/antora-resources/antora.yml
@@ -20,6 +20,8 @@ asciidoc:
     springhateoasversion: '${spring-hateoas}'
     releasetrainversion: '${releasetrain}'
     store: Neo4j
+    neo4jGroupId: ${project.groupId}
+    artifactId: ${project.artifactId}
     groupIdStarter: org.springframework.boot
     artifactIdStarter: spring-boot-starter-data-neo4j
     docs-neo4j-docker-version: 5
