--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 		<apiguardian.version>1.1.1</apiguardian.version>
 		<archunit.version>0.23.1</archunit.version>
 		<blockhound.version>1.0.8.RELEASE</blockhound.version>
-		<checkstyle.skip>${skipTests}</checkstyle.skip>
+		<checkstyle.skip>false</checkstyle.skip>
 		<checkstyle.version>10.20.1</checkstyle.version>
 		<dist.id>spring-data-falkordb</dist.id>
 		<dist.key>SDFALKORDB</dist.key>
