--- a/pom.xml
+++ b/pom.xml
@@ -531,7 +531,7 @@
 						<goals>
 							<goal>check</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>none</phase>
 					</execution>
 				</executions>
 			</plugin>
