--- a/pom.xml
+++ b/pom.xml
@@ -557,7 +557,7 @@
 						<goals>
 							<goal>check</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>none</phase>
 						<inherited>true</inherited>
 						<configuration combine.self="override">
 							<excludes>**/module-info.java</excludes>
