--- a/pom.xml
+++ b/pom.xml
@@ -531,7 +531,7 @@
 						<goals>
 							<goal>check</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>none</phase>
 					</execution>
 				</executions>
 			</plugin>
@@ -543,7 +543,7 @@
 						<goals>
 							<goal>validate</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>none</phase>
 						<inherited>true</inherited>
 					</execution>
 				</executions>
@@ -557,7 +557,7 @@
 						<goals>
 							<goal>check</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>none</phase>
 						<inherited>true</inherited>
 						<configuration combine.self="override">
 							<excludes>**/module-info.java</excludes>
