--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         redis-cli -p 6379 GRAPH.QUERY test "RETURN 'Hello FalkorDB' as greeting" || (echo "FalkorDB graph functionality not working" && exit 1)
         
     - name: Run tests
-      run: ./mvnw clean verify -B -Dcheckstyle.skip=true
+      run: ./mvnw clean verify -B -Dcheckstyle.skip=true -Dlicense.skip=true
       env:
         MAVEN_OPTS: -Xmx1024m
         
@@ -103,7 +103,7 @@ jobs:
           ${{ runner.os }}-maven-
           
     - name: Build package
-      run: ./mvnw clean package -DskipTests -B -Dcheckstyle.skip=true
+      run: ./mvnw clean package -DskipTests -B -Dcheckstyle.skip=true -Dlicense.skip=true
       
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
@@ -135,4 +135,4 @@ jobs:
           ${{ runner.os }}-maven-
           
     - name: Run Checkstyle
-      run: ./mvnw validate -B
+      run: ./mvnw validate -B -Dlicense.skip=true
