--- a/pom.xml
+++ b/pom.xml
@@ -543,7 +543,7 @@
 						<goals>
 							<goal>validate</goal>
 						</goals>
-						<phase>validate</phase>
+						<phase>none</phase>
 						<inherited>true</inherited>
 					</execution>
 				</executions>
